# remoclip

./: .gitignore  AGENTS.md  LICENSE  README.md  mkdocs.yaml  pyproject.toml
.github/workflows/: deploy.yml  publish-pypi.yaml  publish-test.yaml
cf-docs-worker/: index.js  wrangler.toml
docs/: client.md  configuration.md  index.md  releases.md  server.md  usage.md  video.md
docs/overrides/partials/integrations/analytics/: custom.html
remoclip/: client_cli.py  config.py  db.py  server_cli.py
src/remoclip/: client_cli.py  config.py  server_cli.py
tests/: test_client.py  test_config.py  test_db.py  test_server.py
