[build-system]
requires = ["uv-build>=0.4"]
build-backend = "uv_build"

[project]
name = "remoclip"
version = "0.1.0"
description = "Remote clipboard server and client CLI tools."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Jeff Johnston" },
]
dependencies = [
    "Flask>=2.2",
    "SQLAlchemy>=1.4",
    "PyYAML>=6.0",
    "requests>=2.31",
    "pyperclip>=1.8",
    "werkzeug>=3.1.3",
]

[project.scripts]
remoclip = "remoclip.client_cli:main"
remoclip_server = "remoclip.server_cli:main"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "mkdocs>=1.6",
    "mkdocs-material>=9.0"
]


[tool.uv.sources]
remoclip = { path = "src/remoclip" }

[tool.pytest.ini_options]
pythonpath = ["src"]

